# youtube-mp3-fastapi

./: .gitignore  README.md  main.py  pyproject.toml
static/: app.js
templates/: index.html
