[project]
name = "youtube-mp3-fastapi"
version = "0.1.0"
description = "Add your description here"
authors = ["Dion Boles <dion.boles@gmail.com>"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "pytubefix==8.12.2",
    "uvicorn>=0.34.2",
    "yt-dlp>=2025.3.31",
]
